# marvel-hr-assist

./: .env  README.md  emails.py  pyproject.toml  server.py  utils.py
hrms/: leave_manager.py
marvel_hr_assist.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
